[gd_scene load_steps=18 format=3 uid="uid://nserv872ga2w"]

[ext_resource type="Script" path="res://script/game.gd" id="1_b1ngt"]
[ext_resource type="PackedScene" uid="uid://b16kebbc85cjf" path="res://scene/player.tscn" id="2_j6hhd"]
[ext_resource type="PackedScene" uid="uid://dwwgfuys3qnxs" path="res://scene/rocks.tscn" id="3_3cm6u"]
[ext_resource type="PackedScene" uid="uid://qqvew0q1kibu" path="res://scene/hud_sys.tscn" id="4_05kc6"]
[ext_resource type="PackedScene" uid="uid://ci5coomkmb50o" path="res://scene/restart_overlay.tscn" id="4_crdes"]
[ext_resource type="PackedScene" uid="uid://cojlojfpcc4nw" path="res://scene/enemy.tscn" id="4_qmm1j"]
[ext_resource type="PackedScene" uid="uid://d15k088yuhwk2" path="res://scene/turret.tscn" id="4_uh0k0"]
[ext_resource type="PackedScene" uid="uid://bruuliwfuypy8" path="res://scene/starchaser.tscn" id="5_es7so"]
[ext_resource type="AudioStream" uid="uid://0fyv83kaejb3" path="res://assets/sfx/playerdeath.wav" id="7_2mdke"]
[ext_resource type="PackedScene" uid="uid://ytlpk3dgf8tp" path="res://scene/pause.tscn" id="8_4j7kd"]
[ext_resource type="Texture2D" uid="uid://camo5jwskgma0" path="res://assets/ori_res/star_background.png" id="9_grgk8"]
[ext_resource type="Texture2D" uid="uid://wh746mncoi47" path="res://scene/bg_0.png" id="10_hwmog"]
[ext_resource type="Texture2D" uid="uid://dnvv7x6uo0hux" path="res://assets/ori_res/close_stars.png" id="11_wewtc"]
[ext_resource type="PackedScene" uid="uid://ia1s4jwghxc1" path="res://homingrock.tscn" id="13_tj5j7"]

[sub_resource type="Environment" id="Environment_baej8"]
background_mode = 3
background_color = Color(0.235294, 0.156863, 0.447059, 1)
ambient_light_source = 1
glow_enabled = true
glow_bloom = 0.23
glow_blend_mode = 0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_68p7v"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nw6di"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(560, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.12

[node name="Game" type="Node2D"]
script = ExtResource("1_b1ngt")
enemy_scenes = Array[PackedScene]([ExtResource("4_qmm1j"), ExtResource("3_3cm6u"), ExtResource("4_uh0k0"), ExtResource("5_es7so"), ExtResource("13_tj5j7")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_baej8")
camera_attributes = SubResource("CameraAttributesPractical_68p7v")

[node name="gameoverplayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2mdke")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD_sys" parent="UI" instance=ExtResource("4_05kc6")]

[node name="restart_overlay" parent="UI" instance=ExtResource("4_crdes")]
visible = false

[node name="Pause" parent="UI" instance=ExtResource("8_4j7kd")]
process_mode = 3
process_priority = 1
visible = false
size_flags_horizontal = 1

[node name="StarEffect" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.713726)
self_modulate = Color(1, 1, 1, 0.592157)
position = Vector2(270, -2)
scale = Vector2(0.4, 0.4)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_nw6di")
texture = ExtResource("9_grgk8")
lifetime = 3.0
preprocess = 5.0

[node name="Parallax" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax"]
motion_mirroring = Vector2(0, 960)

[node name="DarkSpace" type="Sprite2D" parent="Parallax/ParallaxLayer"]
texture_repeat = 2
position = Vector2(270, 480)
texture = ExtResource("10_hwmog")
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="TextureRect" type="TextureRect" parent="Parallax/ParallaxLayer"]
offset_right = 540.0
offset_bottom = 960.0
texture = ExtResource("11_wewtc")
stretch_mode = 1

[node name="EnemySpawnerPeriod" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_j6hhd")]
position = Vector2(272, 749)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="MobsContainer" type="Node2D" parent="."]
position = Vector2(1, 0)

[connection signal="timeout" from="EnemySpawnerPeriod" to="." method="_on_enemy_spawner_period_timeout"]
